--- a/src/dialogs/Makefile.mingw
+++ b/src/dialogs/Makefile.mingw
@@ -10,7 +10,7 @@ include ../../Makefile.mingw.common
 
 OBJ = \
 align.o desktop-properties.o dialog-events.o display-settings.o \
-document-properties.o export.o fill-style.o item-properties.o node-edit.o \
+document-properties.o export.o FileDialog-win32.o fill-style.o item-properties.o node-edit.o \
 object-attributes.o object-properties.o sp-attribute-widget.o \
 stroke-style.o text-edit.o tool-attributes.o tool-options.o \
 transformation.o xml-tree.o
