--- a/configure.in
+++ b/configure.in
@@ -57,11 +57,6 @@ FREETYPE_LIBS=`$FREETYPE_CONFIG --libs`
 AC_SUBST(FREETYPE_CFLAGS)
 AC_SUBST(FREETYPE_LIBS)
 
-dnl SigC++ check
-PKG_CHECK_MODULES(SIGC, sigc++-1.2)
-CXXFLAGS="$CXXFLAGS $SIGC_CFLAGS"
-LIBS="$LIBS $SIGC_LIBS"
-
 dnl ******************************
 dnl Popt checking
 dnl ******************************
@@ -175,7 +170,7 @@ dnl ******************************
 dnl   Unconditional dependencies
 dnl ******************************
 
-PKG_CHECK_MODULES(INKSCAPE, gtk+-2.0 >= 2.0.0  libart-2.0 >= 2.3.10  libxml-2.0 >= 2-2.4.24)
+PKG_CHECK_MODULES(INKSCAPE, gtk+-2.0 >= 2.0.0  libart-2.0 >= 2.3.10  libxml-2.0 >= 2-2.4.24  sigc++-1.2)
 INKSCAPE_LIBS="$INKSCAPE_LIBS $POPT_LIBS -lpng -lz"
 
 dnl Check for bind_textdomain_codeset, including -lintl if GLib brings it in.
