--- a/Makefile.mingw.common
+++ b/Makefile.mingw.common
@@ -1,17 +1,26 @@
 
-## IF automated
+# Sense whether we are on a DOS box or cross-compiling
+ifdef ComSpec
+BUILD=native
+else
+BUILD=cross
+endif
+
+
+
+
+BSLASH := \\#
+FSLASH := /
+
+
+
+ifeq ($(BUILD),cross)
+
+###########################
+# CROSS COMPILER SETTINGS
+###########################
+
 DTG = `date +%y%m%d.%H%M`
-# else hardcoded
-#DTG = 20040108
-
-VERSION = \"0.37cvs${DTG}\"
-
-
-
-
-#CC = gcc
-#CXX = g++
-#WINDRES = windres
 
 CC      = i686-pc-mingw32-gcc
 CXX     = i686-pc-mingw32-g++
@@ -20,12 +29,80 @@ AR      = i686-pc-mingw32-ar
 RANLIB  = i686-pc-mingw32-ranlib
 WINDRES = i686-pc-mingw32-windres
 
-###### DYNAMIC LINKING
-#GTK=c:/gtk
+# file separator
+S = $(FSLASH)
+
+# file manipulation programs
+CP    = cp
+RMDIR = rm -rf 
+MKDIR = mkdir
+CPDIR = cp -rf 
+
+# Where is your GTK directory?
 GTK=$(HOME)/xmingw32/gtk
+#Same thing, file system style
+GTKDOS=$(GTK)
+
+else
+
+###########################
+# NATIVE COMPILER SETTINGS
+###########################
+
+
+# change me!!
+DTG = 20040108
+
+CC      = mingw32-gcc
+CXX     = mingw32-g++
+AS      = as
+AR      = mingw32-ar
+RANLIB  = ranlib
+WINDRES = windres
+
+# file separator
+S = $(BSLASH)
+
+# file manipulation programs
+CP = copy
+#RMDIR = deltree /y
+RMDIR = rmdir /s /q
+MKDIR = mkdir
+CPDIR = xcopy /e /i
+
+# Where is your GTK directory?
+GTK=c:/gtk
 #Same thing, DOS style
-#GTKDOS=c:\gtk
-GTKDOS=$(HOME)/xmingw32/gtk
+GTKDOS=c:\gtk
+
+
+endif
+
+
+
+VERSION = \"0.37cvs${DTG}\"
+
+
+CFLAGS = -O3  -Wall -mms-bitfields -DVERSION=$(VERSION)
+
+
+.cpp.o:
+	$(CXX) $(CFLAGS) $(INC) -c -o $@ $<
+
+.c.o:
+	$(CXX) $(CFLAGS) $(INC) -c -o $@ $<
+
+
+
+
+
+#########################################
+# INCLUDES AND LIBRARIES
+#########################################
+
+###########################
+# DYNAMIC LINKING
+###########################
 
 GTKINC = -I$(GTK)/include/gtkmm-2.0 -I$(GTK)/lib/gtkmm-2.0/include \
 -I$(GTK)/include/sigc++-1.2 -I$(GTK)/lib/sigc++-1.2/include \
@@ -47,7 +124,10 @@ LIBS = $(GTKLIB) -lxml2 $(GTK)/lib/art_lgpl_2.lib $(GTK)/lib/iconv.lib \
 -lfreetype -lpng $(GTK)/lib/libz.lib -mwindows -lws2_32
 
 
-##### STATIC LINKING
+###########################
+# STATIC LINKING
+###########################
+# Worry about these later when statics are done
 #GTKS=c:/ink/gtk2
 GTKS=$(HOME)/xmingw32/gtk2
 #Same thing, DOS style
@@ -76,35 +156,14 @@ GTKSLIB = \
 
 #LIBS = $(GTKSLIB) -mwindows -lws2_32 -limm32 -lole32
 
- 
-#VARS = \
-#-DINKSCAPE_VERSION=\""$(VERSION)"\" \
-#-DPACKAGE_LOCALE_DIR=\""locale"\" \
-#-DDATADIR=\"data\" \
-#-DINKSCAPE_PIXMAPDIR=\""pixmaps"\" \
-#-DINKSCAPE_EXTENSIONDIR=\""extensions"\" \
-#-DINKSCAPE_MODULESDIR=\""modules"\" \
-#-DINKSCAPE_GLADEDIR=\""pixmaps"\"
+#########################################
+# END INCLUDES AND LIBRARIES
+#########################################
 
-CFLAGS = -O3  -Wall -mms-bitfields -DVERSION=$(VERSION)
 
-BSLASH := \\#
-FSLASH := /
-S = $(FSLASH)
 
-#CP = copy
-CP = cp
-#RMDIR = deltree /y
-RMDIR = rm -rf 
-MKDIR = mkdir
-#CPDIR = xcopy /e /i
-CPDIR = cp -rf 
 
-.cpp.o:
-	$(CXX) $(CFLAGS) $(INC) -c -o $@ $<
 
-.c.o:
-	$(CXX) $(CFLAGS) $(INC) -c -o $@ $<
 
 
 
