* src/sp-text.cpp (sp_text_font_style_to_lookup), src/dialogs/text-edit.cpp (sp_text_edit_dialog_font_style_to_lookup): Move this duplicated function to src/libnrtype/font-style-to-pos.cpp as font_style_to_pos, rewriting & fixing its bugs in the process. Adjust callers. * src/libnrtype/font-style-to-pos.cpp, src/libnrtype/font-style-to-pos.h: New files. * src/libnrtype/Makefile.am: Mention the new files. * src/libnrtype/nr-type-pos-def.h: Make the default constructor fill in sensible values.
(bzr r1019)

--- a/src/libnrtype/Makefile.am
+++ b/src/libnrtype/Makefile.am
@@ -17,6 +17,7 @@ INCLUDES = \
 	$(XFT_CFLAGS)
 
 libnrtype_a_SOURCES = \
+	font-style-to-pos.cpp font-style-to-pos.h	\
 	nr-type-primitives.cpp nr-type-primitives.h \
 	nr-typeface.cpp nr-typeface.h \
 	nr-font.cpp nr-font.h \
