Updates to get distcheck to pass.  This included updating POTFILES.in so all of the .po files changed to include new strings.  The others are build fixes and making sure everyone loves everyone else.
(bzr r1217)

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,55 +1,263 @@
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
 inkscape.desktop.in
+src/application.cpp
+src/arc-context.cpp
+src/attributes.cpp
+src/bonobo/canvas-translator.cpp
+src/bonobo/embeddable-desktop.cpp
+src/bonobo/embeddable-document.cpp
+src/bonobo/embeddable-drawing.cpp
+src/bonobo/sodipodi-bonobo.cpp
 src/bonobo/svg-doc-factory.cpp
+src/color.cpp
+src/desktop-affine.cpp
+src/desktop-events.cpp
+src/desktop-handles.cpp
+src/desktop-snap.cpp
 src/desktop.cpp
 src/dialogs/align.cpp
 src/dialogs/desktop-properties.cpp
+src/dialogs/dialog-events.cpp
 src/dialogs/display-settings.cpp
-src/dialogs/document-properties.cpp
 src/dialogs/export.cpp
 src/dialogs/fill-style.cpp
 src/dialogs/item-properties.cpp
 src/dialogs/object-attributes.cpp
 src/dialogs/object-properties.cpp
+src/dialogs/sp-attribute-widget.cpp
 src/dialogs/stroke-style.cpp
 src/dialogs/text-edit.cpp
-src/dialogs/tool-attributes.cpp
 src/dialogs/tool-options.cpp
 src/dialogs/transformation.cpp
 src/dialogs/xml-tree.cpp
+src/dir-util.cpp
+src/display/canvas-arena.cpp
+src/display/nr-arena-glyphs.cpp
+src/display/nr-arena-group.cpp
+src/display/nr-arena-image.cpp
+src/display/nr-arena-item.cpp
+src/display/nr-arena-shape.cpp
+src/display/nr-arena.cpp
+src/display/nr-uta.cpp
+src/display/testnr.cpp
+src/document-undo.cpp
 src/document.cpp
 src/draw-context.cpp
+src/dropper-context.cpp
 src/dyna-draw-context.cpp
 src/event-context.cpp
 src/file.cpp
+src/geom.cpp
+src/gradient-chemistry.cpp
 src/help.cpp
+src/helper/action.cpp
+src/helper/bezier-utils-test.cpp
+src/helper/bezier-utils.cpp
+src/helper/canvas-bpath.cpp
+src/helper/canvas-grid.cpp
+src/helper/curve.cpp
+src/helper/gnome-canvas-acetate.cpp
+src/helper/gnome-utils.cpp
+src/helper/guideline.cpp
+src/helper/nr-gradient-gpl.cpp
+src/helper/nr-plain-stuff-gdk.cpp
+src/helper/nr-plain-stuff.cpp
+src/helper/png-write.cpp
+src/helper/sodipodi-ctrl.cpp
+src/helper/sodipodi-ctrlrect.cpp
+src/helper/sp-canvas-util.cpp
+src/helper/sp-canvas.cpp
+src/helper/sp-ctrlline.cpp
+src/helper/sp-marshal.cpp
 src/helper/unit-menu.cpp
 src/helper/units.cpp
+src/helper/window.cpp
+src/inkscape-stock.cpp
+src/inkscape.cpp
+src/inkview.cpp
 src/interface.cpp
+src/knot.cpp
+src/knotholder.cpp
+src/libarikkei/arikkei-dict.cpp
+src/libarikkei/arikkei-token.cpp
+src/libnr/nr-blit.cpp
+src/libnr/nr-compose-transform.cpp
+src/libnr/nr-compose.cpp
+src/libnr/nr-gradient.cpp
+src/libnr/nr-matrix.cpp
+src/libnr/nr-object.cpp
+src/libnr/nr-path.cpp
+src/libnr/nr-pixblock-line.cpp
+src/libnr/nr-pixblock-pattern.cpp
+src/libnr/nr-pixblock-pixel.cpp
+src/libnr/nr-pixblock.cpp
+src/libnr/nr-point-fns.cpp
+src/libnr/nr-rect.cpp
+src/libnr/nr-stroke.cpp
+src/libnr/nr-svp-render.cpp
+src/libnr/nr-svp-uncross.cpp
+src/libnr/nr-svp.cpp
+src/libnr/nr-types-test.cpp
+src/libnr/nr-types.cpp
+src/libnr/nr-uta.cpp
+src/libnr/nr-values.cpp
+src/libnr/testnr.cpp
+src/libnrtype/cp1250.cpp
+src/libnrtype/cp1251.cpp
+src/libnrtype/cp1252.cpp
+src/libnrtype/cp1253.cpp
+src/libnrtype/cp1254.cpp
+src/libnrtype/cp1255.cpp
+src/libnrtype/cp1256.cpp
+src/libnrtype/cp1257.cpp
+src/libnrtype/cp1258.cpp
+src/libnrtype/cp874.cpp
+src/libnrtype/cp932.cpp
+src/libnrtype/cp936.cpp
+src/libnrtype/cp949.cpp
+src/libnrtype/cp950.cpp
+src/libnrtype/font-style-to-pos.cpp
+src/libnrtype/nr-font.cpp
+src/libnrtype/nr-rasterfont.cpp
+src/libnrtype/nr-type-directory.cpp
+src/libnrtype/nr-type-ft2.cpp
+src/libnrtype/nr-type-gnome.cpp
+src/libnrtype/nr-type-pos-def.cpp
+src/libnrtype/nr-type-primitives.cpp
+src/libnrtype/nr-type-w32.cpp
+src/libnrtype/nr-type-xft.cpp
+src/libnrtype/nr-typeface.cpp
+src/livarot/AVL.cpp
+src/livarot/DblLinked.cpp
+src/livarot/MySeg.cpp
+src/livarot/Path-test.cpp
+src/livarot/Path.cpp
+src/livarot/PathConversion.cpp
+src/livarot/PathOutline.cpp
+src/livarot/PathSimplify.cpp
+src/livarot/PathStroke.cpp
+src/livarot/Shape.cpp
+src/livarot/ShapeDraw.cpp
+src/livarot/ShapeMisc.cpp
+src/livarot/ShapeSweep.cpp
+src/livarot/ShapeSweepUtils.cpp
 src/main.cpp
 src/module.cpp
+src/modules/db.cpp
+src/modules/extension.cpp
 src/modules/gnome.cpp
+src/modules/init.cpp
+src/modules/menu.cpp
 src/modules/ps.cpp
+src/modules/svg.cpp
+src/modules/system.cpp
+src/modules/win32.cpp
+src/node-context.cpp
+src/nodepath.cpp
+src/object-edit.cpp
 src/object-ui.cpp
+src/path-chemistry.cpp
+src/prefs-utils.cpp
 src/print.cpp
 src/rect-context.cpp
+src/rubberband.cpp
 src/select-context.cpp
+src/select-toolbar.cpp
+src/selection-chemistry.cpp
+src/selection.cpp
+src/seltrans-handles.cpp
+src/seltrans.cpp
+src/shortcuts.cpp
 src/slideshow.cpp
-src/inkscape.cpp
 src/sp-anchor.cpp
+src/sp-animation.cpp
+src/sp-chars.cpp
+src/sp-clippath.cpp
+src/sp-cursor.cpp
+src/sp-defs.cpp
+src/sp-ellipse.cpp
+src/sp-gradient.cpp
+src/sp-guide.cpp
 src/sp-image.cpp
 src/sp-item-group.cpp
+src/sp-item-transform.cpp
 src/sp-item.cpp
+src/sp-line.cpp
+src/sp-marker.cpp
+src/sp-mask.cpp
+src/sp-metrics.cpp
+src/sp-namedview.cpp
+src/sp-object-group.cpp
+src/sp-object-repr.cpp
+src/sp-object.cpp
+src/sp-offset.cpp
+src/sp-paint-server.cpp
+src/sp-path.cpp
+src/sp-pattern.cpp
+src/sp-polygon.cpp
+src/sp-polyline.cpp
+src/sp-rect.cpp
+src/sp-root.cpp
+src/sp-shape.cpp
+src/sp-spiral.cpp
+src/sp-star.cpp
+src/sp-symbol.cpp
 src/sp-text.cpp
+src/sp-use.cpp
 src/spiral-context.cpp
+src/splivarot.cpp
 src/star-context.cpp
+src/style.cpp
+src/svg-view.cpp
+src/svg/gill-svg-path.cpp
+src/svg/gnome-canvas-bpath-util.cpp
+src/svg/svg-affine.cpp
+src/svg/svg-color.cpp
+src/svg/svg-length.cpp
+src/svg/svg-path.cpp
+src/text-context.cpp
 src/toolbox.cpp
+src/tools-switch.cpp
+src/uri-references.cpp
+src/uri.cpp
 src/verbs.cpp
+src/version.cpp
+src/view.cpp
+src/widgets/button.cpp
+src/widgets/dash-selector.cpp
 src/widgets/font-selector.cpp
+src/widgets/gradient-image.cpp
+src/widgets/gradient-position.cpp
 src/widgets/gradient-selector.cpp
 src/widgets/gradient-vector.cpp
+src/widgets/icon.cpp
+src/widgets/menu.cpp
 src/widgets/paint-selector.cpp
+src/widgets/ruler.cpp
+src/widgets/sp-color-gtkselector.cpp
+src/widgets/sp-color-notebook.cpp
+src/widgets/sp-color-preview.cpp
+src/widgets/sp-color-scales.cpp
 src/widgets/sp-color-selector.cpp
+src/widgets/sp-color-slider.cpp
+src/widgets/sp-hwrap-box.cpp
 src/widgets/sp-toolbox.cpp
+src/widgets/sp-vwrap-box.cpp
+src/widgets/sp-widget.cpp
+src/widgets/sp-wrap-box.cpp
 src/widgets/sp-xmlview-attr-list.cpp
+src/widgets/sp-xmlview-content.cpp
+src/widgets/sp-xmlview-tree.cpp
+src/widgets/spinbutton-events.cpp
+src/widgets/spw-utilities.cpp
+src/widgets/test-widgets.cpp
+src/widgets/test-wrapbox.cpp
+src/winmain.cpp
+src/xml/repr-action-test.cpp
+src/xml/repr-action.cpp
+src/xml/repr-css.cpp
+src/xml/repr-io.cpp
+src/xml/repr-util.cpp
+src/xml/repr.cpp
+src/zoom-context.cpp
