--- a/src/livarot/Makefile.am
+++ b/src/livarot/Makefile.am
@@ -30,4 +30,4 @@ libvarot_a_SOURCES = \
 	MySeg.cpp MySeg.h
 
 Path_test_SOURCES = Path-test.cpp AVL.cpp DblLinked.cpp PathConversion.cpp PathOutline.cpp Shape.cpp ShapeSweepUtils.cpp
-Path_test_LDADD = ../libnr/nr-point-fns.o ../libnr/nr-types.o -lglib-2.0
+Path_test_LDADD = ../libnr/libnr.a -lglib-2.0
