I updated the files at our CVS root level to conform. I did however leave Makefile.am and configure.in alone because I converted to spaces and it started to give me errors. Thus, I decided since I'm making so many changes that it would be better to commit these files first, and work these out second.
(bzr r1291)

--- a/inkscape.1.in
+++ b/inkscape.1.in
@@ -339,6 +339,7 @@ MenTaLguY,
 Yukihiro Nakai,
 Christian Neumair,
 Mitsuru Oka,
+Jon Phillips,
 Christian Schaller,
 Tom von Schwerdtner,
 Daniel Yacob,
