No need to be redundant about the package name
(bzr r1362)

--- a/configure.in
+++ b/configure.in
@@ -34,7 +34,7 @@ AM_PROG_LIBTOOL
 dnl ******************************
 dnl Gettext stuff
 dnl ******************************
-GETTEXT_PACKAGE=inkscape
+GETTEXT_PACKAGE="$PACKAGE_NAME"
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",[Translation domain used])
 dnl Add the languages which your application supports here.
